Causeview Package Complete/src/objects/Payment__c.object
<CustomObject>
    <description>Causeview - Payment records relating to a Transaction.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Bank account number for ACH/EFT payments</description>
        <label>Account Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Bank account type for ACH/EFT payments</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <description>Payment gateway authorization number</description>
        <inlineHelpText>Payment gateway authorization number</inlineHelpText>
        <label>Authorization #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <description>UK Direct Debit Only - Bank Address</description>
        <formula>Donation__r.Recurring_Donation__r.Bank_Address__c</formula>
        <inlineHelpText>Bank Address for UK Direct Debit</inlineHelpText>
        <label>Bank Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Branch__c</fullName>
        <description>UK Direct Debit Only - Bank Branch Location</description>
        <formula>Donation__r.Recurring_Donation__r.Bank_Branch__c</formula>
        <inlineHelpText>Bank Branch for UK Direct Debit</inlineHelpText>
        <label>Bank Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_City__c</fullName>
        <description>UK Direct Debit Only - Bank City Location</description>
        <formula>Donation__r.Recurring_Donation__r.Bank_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bank City for UK Direct Debit</inlineHelpText>
        <label>Bank City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>Bank name for ACH/EFT payments</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Postal_Code__c</fullName>
        <description>UK Direct Debit Only - Bank Postal Code</description>
        <formula>Donation__r.Recurring_Donation__r.Bank_Postal_Code__c</formula>
        <inlineHelpText>Bank Postal Code of UK Direct Debit</inlineHelpText>
        <label>Bank Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_State__c</fullName>
        <description>UK Direct Debit Only - Bank State</description>
        <formula>Donation__r.Recurring_Donation__r.Bank_State__c</formula>
        <inlineHelpText>Bank State of UK Direct Debit</inlineHelpText>
        <label>Bank State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Invoice_Number__c</fullName>
        <description>Transaction invoice number - reference from payment gateway</description>
        <inlineHelpText>Transaction invoice number - reference from payment gateway</inlineHelpText>
        <label>Invoice #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Reference__c</fullName>
        <description>Payment gateway reference number</description>
        <inlineHelpText>Payment gateway reference number</inlineHelpText>
        <label>Reference #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Transaction_Date__c</fullName>
        <description>The date the CC was processed.</description>
        <label>CC Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Num__c</fullName>
        <description>Cheque number.</description>
        <label>Check Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent_Name__c</fullName>
        <description>Name of constituent used to merge in notification templates</description>
        <formula>Donation__r.Constituent_Name__c</formula>
        <inlineHelpText>Name of constituent used to merge in notification templates</inlineHelpText>
        <label>Constituent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <formula>IF(ISBLANK( Donation__r.Organization__c ), HYPERLINK(&quot;/&quot; &amp; Donation__r.Constituent__c, Donation__r.Constituent__r.FirstName &amp; &quot; &quot; &amp; Donation__r.Constituent__r.LastName,&quot;_self&quot;), HYPERLINK(&quot;/&quot; &amp; Donation__r.Organization__c, Donation__r.Organization__r.Name,&quot;_self&quot;))</formula>
        <label>Constituent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <description>Masked credit card number returned from X-Charge.</description>
        <label>Credit Card Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <description>Payment credit card used for transaction.</description>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateTimeUTC__c</fullName>
        <description>UTC Value of Date (with Time component) when Payment was processed Payment Processor. Value will be displayed in Users&apos;s time zone.</description>
        <inlineHelpText>UTC Value of Date (with Time component) when Payment was processed Payment Processor. Value will be displayed in Users&apos;s time zone.</inlineHelpText>
        <label>DateTimeUTC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateUTC__c</fullName>
        <description>UTC Value of Date when Payment was processed Payment Processor. Value will be displayed in User&apos;s time zone.</description>
        <formula>DATEVALUE( DateTimeUTC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UTC Value of Date when Payment was processed Payment Processor. Value will be displayed in User&apos;s time zone.</inlineHelpText>
        <label>DateUTC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Deposited__c</fullName>
        <label>Date Deposited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date of Payment</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>Calculates number of days payment is overdue</description>
        <formula>IF (AND(ISPICKVAL( Status__c , &quot;Pending&quot;),Date__c &lt; Today ()),  Today() - Date__c, 
IF (AND(ISPICKVAL( Status__c , &quot;Committed&quot;),Date__c &lt; Today ()),  Today() - Date__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates number of days payment is overdue</inlineHelpText>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <label>Transaction</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Payment_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Payment ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formatted_Payment_Date__c</fullName>
        <description>Formatted payment date used for receipt merging</description>
        <formula>CASE(MONTH(Date__c),1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) &amp;&quot; &quot;&amp; TEXT(DAY(Date__c)) &amp;&quot;, &quot;&amp; TEXT(YEAR(Date__c))</formula>
        <inlineHelpText>Formatted payment date used for receipt merging</inlineHelpText>
        <label>Formatted Payment Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Amount__c</fullName>
        <formula>IF(Total_Gift_Aid_Eligible_Amount__c = 0, 0, Total_Gift_Aid_Eligible_Amount__c*0.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift-Aid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Claim_Date__c</fullName>
        <label>Gift-Aid Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Claim_Status__c</fullName>
        <label>Gift-Aid Claim Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not claimed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Claimed not received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Declaration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift-Aid Declaration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Gift_Aid_Declaration__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Gift_Aid_Declaration__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift-Aid Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Received_Date__c</fullName>
        <label>Gift-Aid Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <label>House Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsCurrentFiscal__c</fullName>
        <formula>IF (YEAR( Date__c ) ==  YEAR( TODAY() ), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCurrentFiscal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Address__c</fullName>
        <description>Email address used for notification emails</description>
        <inlineHelpText>Email address used for notification emails</inlineHelpText>
        <label>Notification Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Original_Corporate_Amount__c</fullName>
        <description>Amount based on Currency conversion rate at the time of Payment in Corporate currency ** Multi-currency use only **</description>
        <formula>if( PaymentConversionRate__c = 0,Amount__c, 
Amount__c / PaymentConversionRate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount based on Currency conversion rate at the time of Payment in Corporate currency</inlineHelpText>
        <label>Original Corporate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentConversionRate__c</fullName>
        <defaultValue>1.000000</defaultValue>
        <description>Conversion rate (from corporate currency) used at the time of payment</description>
        <inlineHelpText>Conversion rate (from corporate currency) used at the time of payment</inlineHelpText>
        <label>PaymentConversionRate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Refunded__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the payment that refund applies to.</description>
        <inlineHelpText>Lookup to the payment that refund applies to.</inlineHelpText>
        <label>Payment Refunded</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card - Offline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH/PAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd-Party Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Single or Consolidated Receipt.</description>
        <label>Receipt</label>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Frequency__c</fullName>
        <description>Used for merge into recurring notification templates</description>
        <formula>Donation__r.Recurring_Frequency__c</formula>
        <inlineHelpText>Used for merge into recurring notification templates</inlineHelpText>
        <label>Recurring Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Payment_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related recurring payment batch.</description>
        <label>Recurring Payment Batch</label>
        <referenceTo>Recurring_Payment_Batch__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Comments__c</fullName>
        <label>Refund Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <label>Refund Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Constituent Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used when converting Opportunities to Grants or Pledges</description>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Routing_Branch_Number__c</fullName>
        <description>Routing or branch number for ACH/EFT payments</description>
        <label>Routing/Branch Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUN_Number__c</fullName>
        <description>UK Direct Debit Only -  Service User Number - The unique six digit number allocated to organizations authorized to use the Bacs service in the UK</description>
        <formula>Donation__r.Recurring_Donation__r.SUN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Service User Number - The unique six digit number allocated to organizations authorized to use the Bacs service in the UK</inlineHelpText>
        <label>SUN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <description>UK Direct Debit Only - A six digit code uniquely identifying the location of where an account is.</description>
        <formula>Donation__r.Recurring_Donation__r.Sort_Code_Formatted__c</formula>
        <inlineHelpText>A six digit code uniquely identifying the location of where an account is for UK Direct Debit.</inlineHelpText>
        <label>Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusComment__c</fullName>
        <label>Status Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH Return</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Gift_Aid_Eligible_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Roll up of Allocation.causeview_Approved_Amount__c</description>
        <label>Total Gift-Aid Eligible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transit_Number__c</fullName>
        <description>Bank transit number for ACH/EFT payments</description>
        <label>Transit Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iATS_Potentially_Fraudulent_Code__c</fullName>
        <label>iATS Potentially Fraudulent Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iATS_Potentially_Fraudulent_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>iATS Potentially Fraudulent Payment</description>
        <inlineHelpText>iATS Potentially Fraudulent Payment</inlineHelpText>
        <label>iATS Potentially Fraudulent Payment</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Credit_Card_Type__c</columns>
        <columns>Status__c</columns>
        <columns>StatusComment__c</columns>
        <columns>Donation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Receipt__c</columns>
        <columns>Constituent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CC_Reference__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ACH_PAD_Payments</fullName>
        <columns>NAME</columns>
        <columns>Payment_Type__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CC_Reference__c</columns>
        <columns>Authorization__c</columns>
        <columns>Bank_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Routing_Branch_Number__c</columns>
        <columns>Transit_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Type__c</field>
            <operation>contains</operation>
            <value>ACH</value>
        </filters>
        <label>All ACH/PAD Payments</label>
    </listViews>
    <listViews>
        <fullName>All_Outstanding_Pledge_Payments</fullName>
        <columns>NAME</columns>
        <columns>Donation__c</columns>
        <columns>Constituent__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payment__c.Standard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Committed,Pending</value>
        </filters>
        <label>All Outstanding Pledge Payments</label>
    </listViews>
    <listViews>
        <fullName>Pledge_Payments_Due_THIS_YEAR</fullName>
        <columns>NAME</columns>
        <columns>Donation__c</columns>
        <columns>Constituent__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payment__c.Standard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Committed,Pending</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Pledge Payments Due THIS YEAR</label>
    </listViews>
    <listViews>
        <fullName>Pledge_Payments_Due_TODAY</fullName>
        <columns>NAME</columns>
        <columns>Donation__c</columns>
        <columns>Constituent__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payment__c.Standard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Committed,Pending</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Pledge Payments Due TODAY</label>
    </listViews>
    <listViews>
        <fullName>Pledge_Payments_Due_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Donation__c</columns>
        <columns>Constituent__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payment__c.Standard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Committed,Pending</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Pledge Payments Due THIS MONTH</label>
    </listViews>
    <listViews>
        <fullName>Pledge_Payments_Due_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Donation__c</columns>
        <columns>Constituent__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payment__c.Standard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Committed,Pending</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Pledge Payments Due THIS WEEK</label>
    </listViews>
    <listViews>
        <fullName>Pledge_Payments_OVERDUE</fullName>
        <columns>NAME</columns>
        <columns>Donation__c</columns>
        <columns>Constituent__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Payment__c.Standard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Committed,Pending</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Pledge Payments OVERDUE</label>
    </listViews>
    <listViews>
        <fullName>Unreceipted_Payments</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Constituent__c</columns>
        <columns>Donation__c</columns>
        <columns>StatusComment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Receipt__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unreceipted Payments</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Payment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <recordTypes>
        <fullName>ACH_PAD</fullName>
        <active>true</active>
        <description>ACH/Pre Authorized Debit payment - processed via payment gateway</description>
        <label>ACH/PAD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <description>Credit card payment - processed via payment gateway</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund</fullName>
        <active>true</active>
        <description>Refunded credit card payment - processed via payment gateway</description>
        <label>Refund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard payment record - all non credit card payments</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Direct_Debit</fullName>
        <active>true</active>
        <description>UK Direct Debit Record Type</description>
        <label>UK Direct Debit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>